remade db schema, add paging, add new handlers stubs
